<?xml version="1.0"?>
<package format="2">
  <name>mvsim</name>
  <version>0.2.1</version>
  <description>Node for the "multivehicle simulator" framework.</description>

  <maintainer email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/mvsim</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mrpt1</depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>mrpt_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>
