<?xml version="1.0"?>
<package format="2">
  <name>mvsim</name>
  <description>Node for the "multivehicle simulator" framework.</description>

  <!-- REMEMBER: Keep in synch version number in:
    * package.xml
    * CMakeLists.txt
    * libmvsim/mvsim/mvsim_version.h
    * CHANGELOG.rst
   -->
  <version>0.3.0</version>

  <maintainer email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</maintainer>
  <license>BSD</license>
  <url type="website">https://wiki.ros.org/mvsim</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mrpt2</depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>mrpt_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>box2d-dev</depend>

</package>
